tests/ui/02-fail-invalid-type.stderr
error: proc-macro derive panicked
 --> tests/ui/02-fail-invalid-type.rs:5:10
  |
5 | #[derive(ConstEnum)]
  |          ^^^^^^^^^
  |
  = help: message: unexpected struct, const-enum only supports enums

error: proc-macro derive panicked
 --> tests/ui/02-fail-invalid-type.rs:8:10
  |
8 | #[derive(ConstEnum)]
  |          ^^^^^^^^^
  |
  = help: message: unexpected union, const-enum only supports enums

error: unions cannot have zero fields
 --> tests/ui/02-fail-invalid-type.rs:9:1
  |
9 | union TestUnion {}
  | ^^^^^^^^^^^^^^^^^^
